# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2015-11-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Allow the cloudi_service_filesystem configuration arguments
      write_truncate, write_append, notify_one, notify_all
      to take service name patterns
    * Make the OPTIONS allow response header value provided by
      cloudi_service_filesystem correct
    * Add cloudi_args_type:service_name_suffix/2 and
      cloudi_args_type:service_name_pattern_suffix/2 for the common
      task of getting a service name suffix during service initialization
    * Update types and guards to enforce nonempty_string() on the
      configured service prefix and usage of the service request's
      service name and service name pattern
    * Update erlang_term:
        * Adds support for using the size of binaries nested in maps
        * Fixes the improper list size

2015-11-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add multicast discovery interface address configuration option
    * Add cloudi_args_type module for validating function arguments
      set in the service configuration arguments list
    * Add the cloudi_service_http_rest configuration arguments
      set_content_disposition, use_options_method, use_trace_method
    * Set max configured service processes to 1 due to port ownership for
      cloudi_service_http_cowboy, cloudi_service_http_elli,
      cloudi_service_tcp, cloudi_service_udp
    * Add the timeout_terminate service configuration option
    * Always have an empty space in the logging source output when the
      function name/arity is not provided
    * Update trie, nodefinder (and fix dependency modelines)

2015-11-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Changes to abide by EEP45
        * FUNCTION macro was changed to FUNCTION_NAME
        * FUNCTION_ARITY macro was changed to only be the function arity
    * Fix ERLANG_OTP_VERSION macros used for integration test compilation